Fix z-index order

--- a/src/components/Clips/Clip.module.css
+++ b/src/components/Clips/Clip.module.css
@@ -82,5 +82,5 @@
     left: -24;
     width: 272px;
     height: 48px;
-    z-index: 999;
+    z-index: 888;
 }
